# agentichat

./: .gitignore  BUGFIX_COMPRESS_RICH_MARKUP.md  BUGFIX_CONFIRMATIONS_ET_WARNINGS.md  BUGFIX_RICH_MARKUP_ERROR.md  CHANGELOG.md  CLAUDE.md  COMMANDE_OLLAMA.md  CORRECTIONS_FINALES.md  CORRECTIONS_UX_FINALE.md  DEMO_NOUVELLES_FONCTIONNALITES.md  FEATURE_CONFIRMATION_MODES.md  FEATURE_QWEN3_XML_SUPPORT.md  MODEL_ALBERT.md  NOUVELLES_FONCTIONNALITES_COMPRESSION.md  PHASE1_TESTING.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.txt  QUICKSTART.md  README.md  RESUME_CONFIRMATION_MODES.md  RESUME_SESSION.md  config.albert.example.yaml  config.example.yaml  pyproject.toml  test.py  test_backend.py  test_cli.py  test_config_commands.py  test_footer.sh  test_footer_layout.py  test_interactions.py  test_log_commands.py  test_log_viewer.py  test_ollama_commands.py  test_phase2.py  test_prompt_manager.py  test_toolcall_serialization.py  validate_phase1.py
.claude/: .nfs000000000074cf6600000002  .nfs00000000007e065c00000004  INSTRUCTIONS.md  settings.local.json
docs/: 02-SPECIFICATIONS.md  03-BRIEFING-CLAUDE-CODE.md  04-COMPLEMENTS.md  COMMANDE_PROMPT.md  CORRECTIONS_APPLIQUEES.md  CORRECTIONS_INTERACTION.md  CORRECTIONS_SESSION2.md  ERREUR_CORRIGEE.md  IMPROVEMENT_PLAN.md  PHASE1_COMPLETE.md
src/agentichat/: main.py
src/agentichat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test.agentichat/: @hello_world.py  hello_word.py  surface_calculator.py  test.py
test.agentichat/bestPDF2txt/: AGENTICHAT.md  README.md  exemple_rtf_table.rtf  pyproject.toml
(+46 files in other folders)
