[project]
name = "agentichat"
version = "0.1.0"
description = "Autonomous AI assistant in your terminal - Talk to your files, the web, and your tasks with agentic AI powered by Ollama"
requires-python = ">=3.11"
authors = [
    {name = "agentichat contributors"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "aiohttp>=3.9",
    "click>=8.1",
    "pyyaml>=6.0",
    "aiosqlite>=0.19",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]
embeddings = [
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]

[project.scripts]
agentichat = "agentichat.main:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
